[package]
name = "enumerative_egg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#egg = "0.7.1"
itertools= "0.10.2"
symbolic_expressions = "5"
#rsmt2 = "0.14.1"
smt2parser = "0.6.1"
regex = "1.5.4"
tokio = {version= "1.17.0", features = ["rt-multi-thread", "macros", "time"]}

[dependencies.lexpr]
path = "./parser" # Make the parser local because I modified how it treat hex number

[dependencies.rsmt2]
path = "./rsmt2" # Make the rsmt2 local because I added simplify for quick_verify


[dependencies.egg]
path = "./egg"
